--- a/desafio5/src/views/realTimeProducts.handlebars
+++ b/desafio5/src/views/realTimeProducts.handlebars
@@ -74,4 +74,4 @@
 </div>
 
 <script src="/socket.io/socket.io.js"></script>
-<script src="/js/realtime.js"></
+<script src="/js/realtime.js"></script>
